--- a/locales/chi/translation.json
+++ b/locales/chi/translation.json
@@ -1,7 +1,10 @@
 {
+  "Sign In": "登录",
+  "PreOrderHeader": "预购",
+
   "AutoFarmX": "AutoFarm X -为农场提供创新可靠的解决方案",
   "MainDescription": "CS2和Steam的多功能软件。这是一种创新的方式，可以让掉落箱子更加安全。",
-  "Pre-order": "Pre-Order",
+  "Pre-order": "预购",
   "Pre-orderDiscr": "这个金额包含一个月的访问权限，之后续费订阅金额为每月$70。",
   "Contact for purchase": "购买软件请联系我们",
   "PrivateProject": "私人项目",
@@ -24,29 +27,30 @@
   "LooterDiscr": "使用代理自动处理来自不同游戏物品传输的报价请求。",
   "TF2": "军团要塞 2",
   "TF2Discr": "“军团要塞2“账户的自动农场功能，玩家可以在账户上自动购买道具，解锁账户进行农场活动。",
-  "Unique services": "Unique services",
-  "Unique services descr": "Cheap buying prime on accounts, selling drops at a good percentage and more. These services will be available only to AFX software users.",
-  "NotAll": "And that's not all",
-  "NotAllDiscr": "Our team is already developing new modes that will soon be added to the panel",
+  "Unique services": "独特的服务",
+  "Unique services descr": "以低价购买优先账户、以高比例价格出售掉落物品等服务。这些服务将仅对 AFX 软件用户开放。",
+  "NotAll": "这还不是全部",
+  "NotAllDiscr": "我们的团队已经在开发新的模式，很快就会添加到面板中",
 
-  "Slot purchase": "Slot purchase",
-  "Slots": "Slots",
+  "Slot purchase": "名额购买",
+  "Slots": "名额",
+  "Purchase": "购买",
   "November": "November",
   "October": "October",
 
-  "PreOrderTitle": "Pre-Order. This project is a closed. Only 300 slots will be sold in 3 waves.",
-  "PreOrderTDiscr": "For this amount you buy access for a month, the price is further $70 per month.",
+  "PreOrderTitle": "预购。这个项目已经关闭了。只有300个名额将分3次出售。",
+  "PreOrderTDiscr": "这个金额包含一个月的访问权限，之后续费订阅金额为每月$70。",
 
-  "Q1": "If I buy a seat and one license, do I need to buy another seat for the second license?",
-  "Q1T": "No, a seat is assigned to each user, which gives access to unique chats and services. In case a user needs to buy another license, he/she will have to pay only for the license, without paying for a seat.",
-  "Q2": "How will the boost work in DM mode?",
-  "Q2T": "How will the boost work in DM mode?",
-  "Q3": "How will the virtual machines work?",
-  "Q3T": "Virtual machines will be able to be run on different PCs, regardless of their location, which will greatly simplify logistics for users.",
-  "Q4": "Will there be any limits?",
-  "Q4T": "Each license will have a limit of 16 virtual machines, which equals a 900 account boost. In case a user needs more virtual machines, they will need to purchase another license.",
-  "Q5": "Will there be any discounts?",
-  "Q5T": "No, we will not do any discount for purchasing a new panel.",
-  "Q6": "Will there be a subscription forever?",
-  "Q6T": "No, there will only be a monthly subscription."
+  "Q1": "新面板的优点是什么？",
+  "Q1T": "不，每个用户都有一个邀请码，可以使用单独的聊天和服务。如果用户需要购买另一个许可证，他/她将只需要为许可证付费，而不需要为邀请码付费。",
+  "Q2": "一个新面板的成本是多少？",
+  "Q2T": "用户将有两种提升选择：每个账户单独提升和16个账户在一个房间内提升。每个帐户将在单独的虚拟机环境中运行。",
+  "Q3": "如果我购买一个邀请码和一个许可证，我是否需要为第二个许可证购买另一个邀请码？",
+  "Q3T": "虚拟机将能够在不同的PC上运行，而且不管它们（PC）在哪里，这将大大简化用户的后勤工作。",
+  "Q4": "新面板将为用户提供哪些独特的服务？",
+  "Q4T": "每个许可证将有16个虚拟机的限制，这相当于900个帐户的提升。如果用户需要更多的虚拟机和更高的提升效率，他们将需要购买另一个许可证。",
+  "Q5": "在DM模式下工作效率如何？",
+  "Q5T": "不，我们不会给购买新面板的顾客打折。",
+  "Q6": "虚拟机如何工作？",
+  "Q6T": "不，只能按月订阅。"
 }
