--- a/locales/chi/translation.json
+++ b/locales/chi/translation.json
@@ -41,16 +41,18 @@
   "PreOrderTitle": "预购。这个项目已经关闭了。只有300个名额将分3次出售。",
   "PreOrderTDiscr": "这个金额包含一个月的访问权限，之后续费订阅金额为每月$70。",
 
-  "Q1": "新面板的优点是什么？",
+  "DMimgText": "每周限制16个虚拟机或900个帐户。这个限制可以增加。",
+
+  "Q1": " 如果我购买一个邀请码和一个许可证，我是否需要为第二个许可证购买另一个邀请码？",
   "Q1T": "不，每个用户都有一个邀请码，可以使用单独的聊天和服务。如果用户需要购买另一个许可证，他/她将只需要为许可证付费，而不需要为邀请码付费。",
-  "Q2": "一个新面板的成本是多少？",
+  "Q2": "在DM模式下工作效率如何？",
   "Q2T": "用户将有两种提升选择：每个账户单独提升和16个账户在一个房间内提升。每个帐户将在单独的虚拟机环境中运行。",
-  "Q3": "如果我购买一个邀请码和一个许可证，我是否需要为第二个许可证购买另一个邀请码？",
+  "Q3": "虚拟机如何工作？",
   "Q3T": "虚拟机将能够在不同的PC上运行，而且不管它们（PC）在哪里，这将大大简化用户的后勤工作。",
-  "Q4": "新面板将为用户提供哪些独特的服务？",
+  "Q4": "会有哪些限制?",
   "Q4T": "每个许可证将有16个虚拟机的限制，这相当于900个帐户的提升。如果用户需要更多的虚拟机和更高的提升效率，他们将需要购买另一个许可证。",
-  "Q5": "在DM模式下工作效率如何？",
+  "Q5": "会有更多的折扣活动吗？",
   "Q5T": "不，我们不会给购买新面板的顾客打折。",
-  "Q6": "虚拟机如何工作？",
+  "Q6": "会有永久性的订阅服务吗？",
   "Q6T": "不，只能按月订阅。"
 }
