--- a/locales/chi/translation.json
+++ b/locales/chi/translation.json
@@ -54,5 +54,51 @@
   "Q5": "会有更多的折扣活动吗？",
   "Q5T": "不，我们不会给购买新面板的顾客打折。",
   "Q6": "会有永久性的订阅服务吗？",
-  "Q6T": "不，只能按月订阅。"
+  "Q6T": "不，只能按月订阅。",
+
+  "TermsTitle": "TEDONSTORE的使用条款",
+  "TermsLastUpdare": "上次更新于2022年7月12日",
+  "Term1Title": "1. 接受使用条款",
+  "Term1Text": "通过访问本网站，您同意受这些使用条款和条件、所有适用法律和法规的约束，并同意您有责任遵守任何适用的当地法律。如果您不同意任何这些条款，您将被禁止使用或访问本网站。本网站所载资料受适用的版权及商标法保护。",
+  "Term2Title": "2. 使用许可证",
+  "Term2PointA": "A.允许在tedonstore®网站上临时下载一份材料（信息或软件），仅供个人、非商业用途的临时浏览。这是授予许可，而不是转让所有权，根据本许可，您不得：",
+  "Term2PointA1": "1. 修改或复制材料",
+  "Term2PointA2": "2. 将资料用于任何商业用途，或用于任何公开展示（商业或非商业）；",
+  "Term2PointA3": "3. 试图反编译或逆向工程tedonstore®网站上包含的任何软件； ",
+  "Term2PointA4": "4. 从材料中删除任何版权或其他专有符号；OR5。将材料转移给另一个人或在任何其他服务器上“镜像”材料。",
+  "Term2PointB": "B.如果您违反了这些限制中的任何一项，本许可将自动终止，并且tedonstore®可以随时终止本许可。在您终止查看这些材料或终止本许可时，您必须销毁您拥有的任何下载材料，无论是电子格式还是打印格式。",
+  "Term3Title": "3. 免责声明",
+  "Term3Text": "tedonstore®网站上的资料均按“原样”提供。Tedonstore®不作任何明示或暗示的保证，并在此声明并否定所有其他保证，包括但不限于，关于适销性、适合某一特定目的、或不侵犯知识产权或其他侵犯权利的暗示保证或条件。此外，tedonstore®不保证或对其互联网网站上或与此类材料或与本网站链接的任何网站上使用的材料的准确性、可能的结果或可靠性作出任何陈述。",
+  "Term4Title": "4. 限制",
+  "Term4Text": "在任何情况下，tedonstore®或其供应商均不对因使用或无法使用tedonstore®互联网网站上的材料而产生的任何损害（包括但不限于数据或利润损失或业务中断造成的损害）承担责任，即使tedonstore®或tedonstore®授权代表已被口头或书面通知该等损害的可能性。由于某些司法管辖区不允许对默示保证或相应或附带损害的责任限制进行限制，因此这些限制可能不适用于您。",
+  "Term5Title": "5. 修订和勘误表",
+  "Term5Text": "出现在tedonstore®网站上的材料可能包括技术、印刷或摄影错误。Tedonstore®不保证其网站上的任何材料是准确的、完整的或最新的。Tedonstore®可随时更改其网站上包含的材料，恕不另行通知。但是，Tedonstore®不承诺更新这些材料。",
+  "Term6Title": "",
+  "Term6Text": "",
+  "Term7Title": "7. 网站使用条款修改",
+  "Term7Text": "Tedonstore®可随时修改其网站的这些使用条款，恕不另行通知。使用本网站即表示您同意受这些使用条款和条件的当时最新版本的约束。",
+  "Term8Title": "8. 订阅",
+  "Term8Text1": "1. 订阅在购买的时间内有效。过期时，如果用户接受，则需要手动或自动更新。",
+  "Term8Text2": "2. 滥用第三方支付服务获取免费服务的用户将被立即永久封禁。",
+  "Term8Text3": "3. 被发现出售订阅、破解或改变软件行为的用户将立即被永久禁止使用。",
+  "Term8Text4": "4. tedonstore®可随时终止订阅，恕不另行通知，也不承担任何财务或其他责任。",
+  "Term9Title": "9. 在线游戏",
+  "Term9Text": "由于使用本网站或任何软件或其中包含的数据，Tedonstore®不对您的在线游戏帐户承担任何责任。您，用户，对您的在线游戏活动全权负责，您的任何在线游戏帐户的任何损失，无论是财务损失还是其他损失，都是您的责任。",
+  "Term10Title": "10. 关于付款",
+  "Term10Text": "在未经账户持有人同意的情况下，对账户进行欺诈性收费或/和任何欺诈行为将导致您的账户立即被禁用，永久终止和/或采取法律行动。我们不允许用户分享或转售他的帐户，否则将导致您的帐户被立即禁用，永久终止和/或采取法律行动。",
+  "Term11Title": "11. 退款",
+  "Term11Text": "方法、套件、帐户、软件和服务器一经售出，概不退换。",
+
+  "PrivacyTitle": "隐私保护",
+  "PrivacyLastUpdare": "上次更新于2022年5月12日",
+  "Privacy1Text": "1. 在收集个人信息之前或收集个人信息时，我们将明确收集个人信息的目的。",
+  "Privacy2Text": "2. 除非我们获得有关个人的同意或法律要求，否则我们将收集和使用个人信息，仅用于实现我们指定的目的和其他相容的目的。",
+  "Privacy3Text": "3. 如无必要，我们将只保留个人信息。",
+  "Privacy4Text": "",
+  "Privacy5Text": "5.个人数据应与使用目的相关，并且在为实现这些目的所需的范围内，应准确、完整且保持最新状态。",
+  "Privacy6Text": "",
+  "Privacy7Text": "7. 我们将随时向客户提供有关我们个人信息管理的政策和做法的信息。",
+
+  "BuyingAFX": "购买 AFX",
+  "BuyingAFXtext": "如需购买，请与我们的经理联系"
 }
