--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -53,13 +53,49 @@
   "Q6": "Will there be a subscription forever?",
   "Q6T": "No, there will only be a monthly subscription.",
 
-  "": "",
-  "": "",
-  "": "",
-  "": "",
-  "": "",
-  "": "",
-  "": "",
-  "": "",
-  "": ""
+  "TermsTitle": "Terms of use TEDONSTORE",
+  "TermsLastUpdare": "LAST UPDATE: 12.07.2022",
+  "Term1Title": "1. Acceptance of terms of use",
+  "Term1Text": "BY ACCESSING THIS WEB SITE, YOU ARE AGREEING TO BE BOUND BY THESE TERMS AND CONDITIONS OF USE, ALL APPLICABLE LAWS AND REGULATIONS, AND AGREE THAT YOU ARE RESPONSIBLE FOR COMPLIANCE WITH ANY APPLICABLE LOCAL LAWS. IF YOU DO NOT AGREE WITH ANY OF THESE TERMS, YOU ARE PROHIBITED FROM USING OR ACCESSING THIS SITE. THE MATERIALS CONTAINED IN THIS WEB SITE ARE PROTECTED BY APPLICABLE COPYRIGHT AND TRADE MARK LAW. ",
+  "Term2Title": "2. Use license",
+  "Term2PointA": "A. PERMISSION IS GRANTED TO TEMPORARILY DOWNLOAD ONE COPY OF THE MATERIALS (INFORMATION OR SOFTWARE) ON TEDONSTORE®'S WEB SITE FOR PERSONAL, NON-COMMERCIAL TRANSITORY VIEWING ONLY. THIS IS THE GRANT OF A LICENSE, NOT A TRANSFER OF TITLE, AND UNDER THIS LICENSE YOU MAY NOT:",
+  "Term2PointA1": "1. MODIFY OR COPY THE MATERIALS",
+  "Term2PointA2": "2. USE THE MATERIALS FOR ANY COMMERCIAL PURPOSE, OR FOR ANY PUBLIC DISPLAY (COMMERCIAL OR NON-COMMERCIAL);",
+  "Term2PointA3": "3. ATTEMPT TO DECOMPILE OR REVERSE ENGINEER ANY SOFTWARE CONTAINED ON TEDONSTORE®'S WEB SITE;",
+  "Term2PointA4": "4. REMOVE ANY COPYRIGHT OR OTHER PROPRIETARY NOTATIONS FROM THE MATERIALS; OR5. TRANSFER THE MATERIALS TO ANOTHER PERSON OR 'MIRROR' THE MATERIALS ON ANY OTHER SERVER.",
+  "Term2PointB": "B. THIS LICENSE SHALL AUTOMATICALLY TERMINATE IF YOU VIOLATE ANY OF THESE RESTRICTIONS AND MAY BE TERMINATED BY TEDONSTORE® AT ANY TIME. UPON TERMINATING YOUR VIEWING OF THESE MATERIALS OR UPON THE TERMINATION OF THIS LICENSE, YOU MUST DESTROY ANY DOWNLOADED MATERIALS IN YOUR POSSESSION WHETHER IN ELECTRONIC OR PRINTED FORMAT.",
+  "Term3Title": "3. Disclaimer",
+  "Term3Text": "The materials on tedonstore®'s web site are provided 'as is'. tedonstore® makes no warranties, expressed or implied, and hereby disclaims and negates all other warranties, including without limitation, implied warranties or conditions of merchantability, fitness for a particular purpose, or non-infringement of intellectual property or other violation of rights. further, tedonstore® does not warrant or make any representations concerning the accuracy, likely results, or reliability of the use of the materials on its internet web site or otherwise relating to such materials or on any sites linked to this site.",
+  "Term4Title": "4. Limitations",
+  "Term4Text": "In no event shall tedonstore® or its suppliers be liable for any damages (including, without limitation, damages for loss of data or profit, or due to business interruption,) arising out of the use or inability to use the materials on tedonstore®'s internet site, even if tedonstore® or a tedonstore® authorized representative has been notified orally or in writing of the possibility of such damage. because some jurisdictions do not allow limitations on implied warranties, or limitations of liability for consequential or incidental damages, these limitations may not apply to you.",
+  "Term5Title": "5. Revisions and errata",
+  "Term5Text": "The materials appearing on tedonstore®'s web site could include technical, typographical, or photographic errors. tedonstore® does not warrant that any of the materials on its web site are accurate, complete, or current. tedonstore® may make changes to the materials contained on its web site at any time without notice. tedonstore® does not, however, make any commitment to update the materials.",
+  "Term6Title": "6. Links",
+  "Term6Text": "Tedonstore® has not reviewed all of the sites linked to its internet web site and is not responsible for the contents of any such linked site. the inclusion of any link does not imply endorsement by tedonstore® of the site. use of any such linked web site is at the user's own risk.",
+  "Term7Title": "7. Site Terms Of Use Modifications",
+  "Term7Text": "Tedonstore® may revise these terms of use for its web site at any time without notice. by using this web site you are agreeing to be bound by the then current version of these terms and conditions of use.",
+  "Term8Title": "8. Subscription",
+  "Term8Text1": "1. the subscription is valid for the time purchased. when expired, the user is required to renew it manually or automatically, if the user accepted it.",
+  "Term8Text2": "2. USERS CAUGHT ABUSING THIRD PARTY PAYMENT SERVICES TO OBTAIN FREE SERVICES WILL BE IMMEDIATELY AND PERMANENTLY BANNED.",
+  "Term8Text3": "3. users caught selling subscriptions, cracking or alterating the behavior of the software will be immediately and permanently banned.",
+  "Term8Text4": "4. subscriptions may be terminated by tedonstore® at any time without warning and without liability, whether financial or not.",
+  "Term9Title": "9. Online gaming",
+  "Term9Text": "Tedonstore® accepts no responsibility to your online gaming accounts as a result of using this website or any software, or data contained within. you, the user, are solely responsible for your online gaming activities and any loss to any of your online gaming accounts, whether financial or not, is your responsibility.",
+  "Term10Title": "10. Payment policy",
+  "Term10Text": "Fraudulent charges with an account that sends money without the consent of the account holder or/and any kind of frauds will result in your account being instantly disabled, permanently terminated and/or legal action will be taken. we do not allow the user to share or resell his account, it will result in your account being instantly disabled, permanently terminated and/or legal action will be taken.",
+  "Term11Title": "11. Refunds",
+  "Term11Text": "Refunds for methods, kits, accounts, software and servers aren't possible.",
+
+  "PrivacyTitle": "Terms of use TEDONSTORE",
+  "PrivacyLastUpdare": "LAST UPDATE: 12.07.2022",
+  "Privacy1Text": "1. before or at the time of collecting personal information, we will identify the purposes for which information is being collected.",
+  "Privacy2Text": "2. we will collect and use of personal information solely with the objective of fulfilling those purposes specified by us and for other compatible purposes, unless we obtain the consent of the individual concerned or as required by law.",
+  "Privacy3Text": "3. we will only retain personal information as long as necessary for the fulfillment of those purposes.",
+  "Privacy4Text": "4. We will collect personal information by lawful and fair means and, where appropriate, with the knowledge or consent of the individual concerned.",
+  "Privacy5Text": "5. personal data should be relevant to the purposes for which it is to be used, and, to the extent necessary for those purposes, should be accurate, complete, and up-to-date.",
+  "Privacy6Text": "6. We will protect personal information by reasonable security safeguards against loss or theft, as well as unauthorized access, disclosure, copying, use or modification.",
+  "Privacy7Text": "7. we will make readily available to customers information about our policies and practices relating to the management of personal information.",
+
+  "BuyingAFX": "Buying AFX",
+  "BuyingAFXtext": "To make a purchase, please contact our manager."
 }
