--- a/locales/ru/translation.json
+++ b/locales/ru/translation.json
@@ -47,5 +47,51 @@
   "Q5": "Will there be any discounts?",
   "Q5T": "Нет, мы не будем делать никакие скидки для покупки новой панели.",
   "Q6": "Will there be a subscription forever?",
-  "Q6T": "Нет, будет только месячная подписка."
+  "Q6T": "Нет, будет только месячная подписка.",
+
+  "TermsTitle": "",
+  "TermsLastUpdare": "",
+  "Term1Title": "",
+  "Term1Text": "",
+  "Term2Title": "",
+  "Term2PointA": "",
+  "Term2PointA1": "",
+  "Term2PointA2": "",
+  "Term2PointA3": "",
+  "Term2PointA4": "",
+  "Term2PointB": "",
+  "Term3Title": "",
+  "Term3Text": "",
+  "Term4Title": "",
+  "Term4Text": "",
+  "Term5Title": "",
+  "Term5Text": "",
+  "Term6Title": "",
+  "Term6Text": "",
+  "Term7Title": "",
+  "Term7Text": "",
+  "Term8Title": "",
+  "Term8Text1": "",
+  "Term8Text2": "",
+  "Term8Text3": "",
+  "Term8Text4": "",
+  "Term9Title": "",
+  "Term9Text": "",
+  "Term10Title": "",
+  "Term10Text": "",
+  "Term11Title": "",
+  "Term11Text": "",
+
+  "PrivacyTitle": "Terms of use TEDONSTORE",
+  "PrivacyLastUpdare": "LAST UPDATE: 12.07.2022",
+  "Privacy1Text": "",
+  "Privacy2Text": "",
+  "Privacy3Text": "",
+  "Privacy4Text": "",
+  "Privacy5Text": "",
+  "Privacy6Text": "",
+  "Privacy7Text": "",
+
+  "BuyingAFX": "",
+  "BuyingAFXtext": ""
 }
