--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -2,6 +2,17 @@
   "Sign In": "Sign In",
   "PreOrderHeader": "Pre-Order",
 
+  "Ask question": "Ask question",
+
+  "Email": "Email",
+  "Password": "Password",
+  "Re-Password": "Re-enter password",
+  "SignIn": "Sign in",
+  "SignUp": "Sign up",
+  "LoginError": "You have entered an incorrect login or password",
+  "RegError": "You have entered an incorrect login or password",
+  "HaveAcc": "Don't have an account yet? ",
+
   "AutoFarmX": "AutoFarm X - provides an innovative and reliable solution for farm",
   "MainDescription": "Multifunctional software for Counter-Strike 2 & Steam. An innovative way to get a case with an increased level of security.",
   "Pre-order": "Pre-Order",
