--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -43,6 +43,9 @@
   "NotAll": "And that's not all",
   "NotAllDiscr": "Our team is already developing new modes that will soon be added to the panel",
 
+  "PreOrderTitle": "Pre-Order. This project is a closed. Only 300 slots will be sold in 3 waves.",
+  "PreOrderTDiscr": "For this amount you buy access for a month, the price is further $70 per month.",
+
   "Slot purchase": "Slot purchase",
   "Slots": "Slots",
   "Purchase": "Purchase",
