--- a/locales/chi/translation.json
+++ b/locales/chi/translation.json
@@ -84,8 +84,8 @@
   "Term4Text": "在任何情况下，tedonstore®或其供应商均不对因使用或无法使用tedonstore®互联网网站上的材料而产生的任何损害（包括但不限于数据或利润损失或业务中断造成的损害）承担责任，即使tedonstore®或tedonstore®授权代表已被口头或书面通知该等损害的可能性。由于某些司法管辖区不允许对默示保证或相应或附带损害的责任限制进行限制，因此这些限制可能不适用于您。",
   "Term5Title": "5. 修订和勘误表",
   "Term5Text": "出现在tedonstore®网站上的材料可能包括技术、印刷或摄影错误。Tedonstore®不保证其网站上的任何材料是准确的、完整的或最新的。Tedonstore®可随时更改其网站上包含的材料，恕不另行通知。但是，Tedonstore®不承诺更新这些材料。",
-  "Term6Title": "",
-  "Term6Text": "",
+  "Term6Title": "6.链接",
+  "Term6Text": "tedonstore®没有审查所有链接到其互联网网站的网站，也不对任何此类链接网站的内容负责。包含任何链接并不意味着tedonstore®对本网站的认可。使用任何此类链接网站的风险由用户自行承担。",
   "Term7Title": "7. 网站使用条款修改",
   "Term7Text": "Tedonstore®可随时修改其网站的这些使用条款，恕不另行通知。使用本网站即表示您同意受这些使用条款和条件的当时最新版本的约束。",
   "Term8Title": "8. 订阅",
@@ -105,9 +105,9 @@
   "Privacy1Text": "1. 在收集个人信息之前或收集个人信息时，我们将明确收集个人信息的目的。",
   "Privacy2Text": "2. 除非我们获得有关个人的同意或法律要求，否则我们将收集和使用个人信息，仅用于实现我们指定的目的和其他相容的目的。",
   "Privacy3Text": "3. 如无必要，我们将只保留个人信息。",
-  "Privacy4Text": "",
+  "Privacy4Text": "4.我们将通过合法且公平的方式收集个人信息，并在适当情况下，在有关个人知晓或同意的情况下进行收集。",
   "Privacy5Text": "5.个人数据应与使用目的相关，并且在为实现这些目的所需的范围内，应准确、完整且保持最新状态。",
-  "Privacy6Text": "",
+  "Privacy6Text": "6.我们将通过合理的安全防护措施来保护个人信息，防止其丢失、被盗以及遭受未经授权的访问、披露、复制、使用或修改。",
   "Privacy7Text": "7. 我们将随时向客户提供有关我们个人信息管理的政策和做法的信息。",
 
   "BuyingAFX": "购买 AFX",
