--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -47,7 +47,7 @@
   "PreOrderTDiscr": "For this amount you buy access for a month, the price is further $70 per month.",
 
   "Slot purchase": "Slot purchase",
-  "Slots": "Slots",
+  "Slots": "Seats",
   "Purchase": "Purchase",
   "November": "November",
   "October": "October",
